# terminal-robot

./: README.md  dependencies  pyproject.toml  requirements.txt  robot_main.py  robotspeech.py  terminal-robot.sh
src/terminal_robot/: __init__.py  main.py  robotspeech.py
